@startuml PawPal UML Design

class Pet {
  +name: str
  +species: str
  +age: int
  +special_needs: list[str]
  +tasks: list[Task]
  +add_task(task: Task)
  +remove_task(index: int)
  +get_pending_tasks() -> list[Task]
}

class Owner {
  +name: str
  +available_hours_per_day: int
  +preferences: dict
  +pets: list[Pet]
  +add_pet(pet: Pet)
  +remove_pet(index: int)
  +get_all_tasks() -> list[Task]
  +get_pending_tasks() -> list[Task]
}

class Task {
  +name: str
  +duration_minutes: int
  +priority: str  // high, medium, low
  +category: str  // feeding, walking, grooming, etc.
  +frequency: str  // daily, weekly, etc.
  +completed: bool
  +mark_complete()
  +is_due() -> bool
}

class ScheduledTask {
  +task: Task
  +start_time: str  // e.g., "08:00"
  +end_time: str
}

class Plan {
  +scheduled_tasks: list[ScheduledTask]
  +total_time: int
  +display_plan() -> str
}

class Scheduler {
  +generate_plan(owner: Owner, start_time: str = "08:00", available_hours: int = None) -> Plan
  -prioritize_tasks(tasks: list[Task]) -> list[Task]
  -schedule_tasks(tasks: list[Task], available_time: int, start_time: str) -> list[ScheduledTask]
  -_parse_time(ts: str) -> int
  -_format_time(minutes: int) -> str
}

' Relationships
Owner --> Pet : owns 1
Owner --> Task : manages *
Task --> ScheduledTask : becomes
Scheduler --> Plan : generates 1
Plan --> ScheduledTask   : contains *

@enduml
